# course-discovery-agent

./: .gitignore  ARTICLE.md  CLAUDE.md  MAYBE_LATER.md  PLAN.md  README.md  main.py  pyproject.toml
agent/: __init__.py  graph.py  state.py
agent/nodes/: __init__.py  dedup.py  gateway.py  hil.py  router.py  synthesizer.py  workers.py
course_discovery/: __init__.py
course_discovery/app/: __init__.py  cli.py  gateway.py  prompts.py
course_discovery/domain/: __init__.py  models.py  state.py
course_discovery/observability/: logging.py
course_discovery/persistence/: postgres.py
course_discovery/research_agent/: __init__.py
course_discovery/research_agent/cache/: __init__.py  dedup.py  nodes.py  repository.py  seed_data.py
course_discovery/research_agent/extraction/: __init__.py  nodes.py
course_discovery/research_agent/memory/: __init__.py  nodes.py  repository.py
course_discovery/research_agent/planning/: __init__.py  nodes.py
course_discovery/research_agent/search/: __init__.py  mock_workers.py  nodes.py  tavily_client.py
course_discovery/research_agent/synthesis/: __init__.py  nodes.py
course_discovery/research_agent/validation/: __init__.py  nodes.py
course_discovery/review/: __init__.py  nodes.py  router.py
course_discovery/workflows/: outer_graph.py  research_graph.py
migrations/: 001_postgres_pgvector.sql
specs/: ARTICLE.md  ARTICLE_OUTLINE.md  FINAL_VERSION.md  FUTURE_IDEAS.md  IMPLEMENTATION_PLAN.md  PROPOSED_METRICS.md  PROPOSED_TESTING.md
tests/: test_research_nodes.py
