[project]
name = "course-discovery-agent"
version = "0.1.0"
description = "LangGraph-powered course discovery agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"langgraph>=0.6.0",
	"langchain-google-genai>=2.1.12",
	"pydantic>=2.11.7",
	"rapidfuzz>=3.14.1",
	"python-dotenv>=1.1.1",
]
